--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -75,6 +75,11 @@
     margin-top: 10px;
 }
 .contact-form-message textarea {
+    height: 100%;
+    width: 100%;
+   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
     padding: 10px;
     margin-top: 20px;
     border-radius: 5px 20px 5px 20px;
